# ai-tester

./: .gitignore  README.md  REVIEW.md  main.py  pyproject.toml
app/: cli.py
app/agent/: agent.py  agent_state.py
app/analyzer/: analyzer.py
app/llm/: llm.py
app/parser/: parser.py
app/raport_generator/: raport_generator.py
config/: settings.yaml
tests/test_data/: dummy_log.txt  dumy_log_bugs.txt  short_log.txt
